# Task-Mesh

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  loadtest.js  pyproject.toml  wait-for-deps.sh
.github/workflows/: ci.yml
.qwen/: settings.json
.qwen/skills/auto-skill-architectural_refactor/: SKILL.md
alembic/: env.py  script.py.mako
alembic/versions/: 20240626000001_create_core_tables.py  20240626000002_expand_jobs_table.py  20240626000003_cleanup_jobs_table.py  20240626000004_align_orm_schema.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/api/: analytics.ts  auth.ts  client.ts  demo.ts  events.ts  jobs.ts  logs.ts  metrics.ts  scheduler.ts  workers.ts
frontend/src/app/: App.test.tsx  App.tsx
frontend/src/constants/: navigation.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: AnalyticsPage.tsx  DeadLetterPage.tsx  EventsPage.tsx  JobsPage.tsx  LogsPage.tsx  NotFoundPage.tsx  OverviewPage.tsx  ProfilePage.tsx  SchedulerPage.tsx  SettingsPage.tsx  WorkersPage.tsx
frontend/src/routes/: router.tsx
infra/k8s/: api.yaml  data.yaml  scheduler.yaml  workers.yaml
monitoring/: prometheus.yml
src/taskmesh/: __init__.py  engine.py  main.py  models.py  scheduler.py  schema.sql  worker.py
src/taskmesh/api/: auth.py  (+2 more)
taskmesh/: __init__.py  main.py
tests/: test_api.py  test_auth_coverage.py  test_basic_routes.py  test_coverage_extra.py  test_engine_api.py  test_engine_coverage.py
(+41 files in other folders)
