[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmesh"
version = "0.1.0"
description = "Distributed task processing platform with queues, retries, DLQ, rate limiting, and worker scaling."
requires-python = ">=3.10" 
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "prometheus-client>=0.20",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "aiosqlite>=0.20",
  "psycopg2-binary>=2.9",
  "redis>=5.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
